fix overflow and center image table

--- a/assignment/src/routes/main.css
+++ b/assignment/src/routes/main.css
@@ -1,84 +1,109 @@
-nav{
-    position:fixed;
-    top: 0;
-    left: 0;
-    right: 0;
+body {
+  background-color: #faf9f6;
+}
+/*link css*/
+a:link {
+  text-decoration: none;
+  color: white;
+}
+a:visited {
+  text-decoration: none;
+  color: white;
+}
+a:hover {
+  text-decoration: none;
+  color: white;
+}
+a:active {
+  text-decoration: none;
+  color: white;
 }
 
-nav ul{
-    list-style: none;
-    margin: 0;
-    padding: 0;
-    display: flex; 
-    background: black;
-    color: white;
-    font-size: larger;
-    justify-content: center;
+nav {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
+  color: #faf9f6;
+  font-family: "Oswald", sans-serif;
 }
 
-nav ul li{
-    padding: 20px;
-    padding-left: 40px;
-    padding-right: 40px;
+nav ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+  background: black;
+  color: white;
+  font-size: larger;
+  justify-content: center;
+}
+
+nav ul li {
+  padding: 15px;
+  padding-left: 40px;
+  padding-right: 40px;
 }
 
 .overlay {
-    display: flex;
-    justify-content: center;
-    color: white;
-    font-size: larger;
-    font-family: 'Oswald', sans-serif;
-  }
+  width: auto 0;
+  display: flex;
+  justify-content: center;
+  color: white;
+  font-size: larger;
+  font-family: "Oswald", sans-serif;
+}
 
 .centeredTitle {
-    position: absolute;
-    top: 15%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-  }
+  position: absolute;
+  top: 15%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 
 .centeredDesc {
-    position: absolute;
-    top: 25%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    font-size: larger;
-    font-weight: 400;
+  position: absolute;
+  top: 25%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: larger;
+  font-weight: 400;
 }
 /*card css*/
-  .card {
-    margin: auto;
-    display: grid;
-    grid-template-columns: 1fr;
-    width: 80%;
-    background-color: #ffffff;
-    border: 1px solid #e6e6e6;
-    border-radius: 10px;
-    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05), 0 2px 2px rgba(0, 0, 0, 0.05),
-      0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05),
-      0 16px 16px rgba(0, 0, 0, 0.05);
-    padding: 2rem;
-  }
-  .card-title {
-    margin: auto;
-  }
-  .card-content {
-    margin: auto;
-  }
-  /*table of images*/
-  .row {
-    display: flex;
-    flex-wrap: wrap;
-    padding: 0 4px;
-  }
-  /* Create two equal columns that sits next to each other */
-  .column {
-    flex: 50%;
-    padding: 0 4px;
-  }
-  
-  .column img {
-    margin-top: 4px;
-    vertical-align: middle;
-    width: 300px;
-  }
+.card {
+  margin: auto;
+  display: grid;
+  grid-template-columns: 1fr;
+  width: 80%;
+  background-color: #ffffff;
+  border: 1px solid #e6e6e6;
+  border-radius: 10px;
+  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.05), 0 2px 2px rgba(0, 0, 0, 0.05),
+    0 4px 4px rgba(0, 0, 0, 0.05), 0 8px 8px rgba(0, 0, 0, 0.05),
+    0 16px 16px rgba(0, 0, 0, 0.05);
+  padding: 2rem;
+}
+.card-title {
+  margin: auto;
+}
+.card-content {
+  margin: auto;
+}
+
+/*table of images*/
+.row {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0 4px;
+}
+/* Create two equal columns that sits next to each other */
+.column {
+  flex: 50%;
+  padding: 0 4px;
+}
+.column img {
+  margin-top: 4px;
+  vertical-align: middle;
+  width: 300px;
+}
